--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Memory</title>
     <link rel="stylesheet" href="css/background-effect.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/mobile-styles.css" />
   </head>
   <body>
     
