added sound effects

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="css/background-effect.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/mobile-styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="m-intro">
       <h1>Memory</h1>
       <p class="time">Time: 00:00</p>
-      <h2 class="hide">Game<br />over</h2>
+      <h2 class="hide">Victory</h2>
       <div class="container"></div>
 
       <div class="button-container">
         <button class="reset-btn">Reset</button>
-        <button class="show-btn">Show</button>
+        <!-- <button class="show-btn">Show</button> -->
       </div>
 
       <div id="particleCanvas-Orange" class="e-particles-orange"></div>
