fixed bug with show not toggling correctly after a reset

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="button-container">
         <button class="reset-btn">Reset</button>
-        <!-- <button class="show-btn">Show</button> -->
+        <button class="show-btn">Show</button>
       </div>
 
       <div id="particleCanvas-Orange" class="e-particles-orange"></div>
